Updated logo scrolling logic and changed sponsorship section layout

--- a/index.html
+++ b/index.html
@@ -321,122 +321,40 @@
             <p class="section-description">We're grateful for the support of our sponsors who make our robotics program possible.</p>
           </div>
 
-          <div class="sponsors-container">
-            <!-- Diamond Sponsors -->
-            <div class="sponsor-tier">
-              <h3 class="sponsor-tier-title sponsor-tier-title-primary">Diamond Sponsors</h3>
-              <div class="sponsors-grid sponsors-grid-2">
-                <div class="sponsor-card sponsor-card-title">
-                  <div class="sponsor-logo-wrap sponsor-logo-wrap-lg">
-                    <img src="assets/logos/ECCS.svg" alt="Eastern Carver County Schools" class="sponsor-logo">
-                  </div>
-                  <div class="sponsor-info">
-                    <h4 class="sponsor-name">Eastern Carver County Schools</h4>
-                    <p class="sponsor-description">Our school district partner providing facilities and support for our robotics program.</p>
-                    <a href="https://district112.org" target="_blank" rel="noopener noreferrer" class="sponsor-link">
-                      Visit Website
-                      <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                        <polyline points="15 3 21 3 21 9"></polyline>
-                        <line x1="10" y1="14" x2="21" y2="3"></line>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-                <div class="sponsor-card sponsor-card-title">
-                  <div class="sponsor-logo-wrap sponsor-logo-wrap-lg">
-                    <img src="assets/logos/GeneHaas.svg" alt="Gene Haas Foundation" class="sponsor-logo">
-                  </div>
-                  <div class="sponsor-info">
-                    <h4 class="sponsor-name">Gene Haas Foundation</h4>
-                    <p class="sponsor-description">Supporting STEM education and manufacturing technology programs nationwide.</p>
-                    <a href="https://www.ghaasfoundation.org/" target="_blank" rel="noopener noreferrer" class="sponsor-link">
-                      Visit Website
-                      <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                        <polyline points="15 3 21 3 21 9"></polyline>
-                        <line x1="10" y1="14" x2="21" y2="3"></line>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
+          <!-- Diamond Sponsors -->
+          <div class="sponsors-tier-section">
+            <div class="tier-label tier-diamond">
+              <span class="tier-badge">◆</span>
+              Diamond
             </div>
+            <div class="sponsors-row">
+              <a href="https://district112.org" target="_blank" rel="noopener noreferrer" class="sponsor-item sponsor-diamond">
+                <img src="assets/logos/ECCS.svg" alt="Eastern Carver County Schools" class="sponsor-img">
+                <span class="sponsor-name-hover">Eastern Carver County Schools</span>
+              </a>
+              <a href="https://www.ghaasfoundation.org/" target="_blank" rel="noopener noreferrer" class="sponsor-item sponsor-diamond">
+                <img src="assets/logos/GeneHaas.svg" alt="Gene Haas Foundation" class="sponsor-img">
+                <span class="sponsor-name-hover">Gene Haas Foundation</span>
+              </a>
+            </div>
+          </div>
 
-            <!-- Gold Sponsors -->
-            <div class="sponsor-tier">
-              <h3 class="sponsor-tier-title sponsor-tier-title-gold">Gold Sponsors</h3>
-              <div class="sponsors-grid sponsors-grid-2">
-                <div class="sponsor-card sponsor-card-gold">
-                  <div class="sponsor-logo-wrap sponsor-logo-wrap-md">
-                    <img src="assets/logos/Meander.svg" alt="Meander Creative" class="sponsor-logo">
-                  </div>
-                  <h4 class="sponsor-name">Meander Creative</h4>
-                  <p class="sponsor-description-sm">Creative design and branding support for our team.</p>
-                  <a href="https://www.meander-creative.com/" target="_blank" rel="noopener noreferrer" class="sponsor-link sponsor-link-gold">
-                    Visit
-                    <svg class="icon icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                      <polyline points="15 3 21 3 21 9"></polyline>
-                      <line x1="10" y1="14" x2="21" y2="3"></line>
-                    </svg>
-                  </a>
-                </div>
-                <div class="sponsor-card sponsor-card-gold">
-                  <div class="sponsor-logo-wrap sponsor-logo-wrap-md">
-                    <img src="assets/logos/Macsteel.svg" alt="Macsteel International" class="sponsor-logo">
-                  </div>
-                  <h4 class="sponsor-name">Macsteel International</h4>
-                  <p class="sponsor-description-sm">Global steel trading and materials support.</p>
-                  <a href="https://www.mitgr.com/" target="_blank" rel="noopener noreferrer" class="sponsor-link sponsor-link-gold">
-                    Visit
-                    <svg class="icon icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                      <polyline points="15 3 21 3 21 9"></polyline>
-                      <line x1="10" y1="14" x2="21" y2="3"></line>
-                    </svg>
-                  </a>
-                </div>
-              </div>
+          <!-- Gold Sponsors -->
+          <div class="sponsors-tier-section">
+            <div class="tier-label tier-gold">
+              <span class="tier-badge">★</span>
+              Gold
             </div>
-
-            <!-- Silver Sponsors - Currently none
-            <div class="sponsor-tier">
-              <h3 class="sponsor-tier-title sponsor-tier-title-silver">Silver Sponsors</h3>
-              <div class="sponsors-grid sponsors-grid-3">
-                <div class="sponsor-card sponsor-card-silver">
-                  <div class="sponsor-logo-wrap sponsor-logo-wrap-sm">
-                    <img src="https://via.placeholder.com/200x80?text=Silver+Sponsor+A" alt="Silver Sponsor A" class="sponsor-logo">
-                  </div>
-                  <h4 class="sponsor-name-sm">Silver Sponsor A</h4>
-                  <p class="sponsor-description-xs">Contributing to operational expenses.</p>
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="sponsor-link-sm">
-                    Visit
-                    <svg class="icon icon-xs" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                      <polyline points="15 3 21 3 21 9"></polyline>
-                      <line x1="10" y1="14" x2="21" y2="3"></line>
-                    </svg>
-                  </a>
-                </div>
-                <div class="sponsor-card sponsor-card-silver">
-                  <div class="sponsor-logo-wrap sponsor-logo-wrap-sm">
-                    <img src="https://via.placeholder.com/200x80?text=Silver+Sponsor+B" alt="Silver Sponsor B" class="sponsor-logo">
-                  </div>
-                  <h4 class="sponsor-name-sm">Silver Sponsor B</h4>
-                  <p class="sponsor-description-xs">Supporting team equipment needs.</p>
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="sponsor-link-sm">
-                    Visit
-                    <svg class="icon icon-xs" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                      <polyline points="15 3 21 3 21 9"></polyline>
-                      <line x1="10" y1="14" x2="21" y2="3"></line>
-                    </svg>
-                  </a>
-                </div>
-              </div>
+            <div class="sponsors-row">
+              <a href="https://www.meander-creative.com/" target="_blank" rel="noopener noreferrer" class="sponsor-item sponsor-gold">
+                <img src="assets/logos/Meander.svg" alt="Meander Creative" class="sponsor-img">
+                <span class="sponsor-name-hover">Meander Creative</span>
+              </a>
+              <a href="https://www.mitgr.com/" target="_blank" rel="noopener noreferrer" class="sponsor-item sponsor-gold">
+                <img src="assets/logos/Macsteel.svg" alt="Macsteel International" class="sponsor-img">
+                <span class="sponsor-name-hover">Macsteel International</span>
+              </a>
             </div>
-            -->
           </div>
 
           <div class="sponsor-cta">
